// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tests for SettingOffices renders correctly from memory 1`] = `
<tr>
  <td>
    EPIC Tower
  </td>
  <td />
  <td>
    GMT +3
  </td>
  <td>
    <Apollo(Apollo(EditOffice))
      currentPage={1}
      id="edit-modal"
      officeId="11"
      officeName="EPIC Tower"
      refetch={[MockFunction]}
    />
     
    <Apollo(Apollo(DeleteOffice))
      currentPage={1}
      id="delete-modal"
      officeId="11"
      officeName="EPIC Tower"
      refetch={[MockFunction]}
    />
  </td>
</tr>
`;

exports[`Tests for SettingOffices renders correctly from memory 2`] = `
<tr>
  <td>
    EPIC Tower
  </td>
  <td />
  <td>
    GMT +1
  </td>
  <td>
    <Apollo(Apollo(EditOffice))
      currentPage={1}
      id="edit-modal"
      officeId="11"
      officeName="EPIC Tower"
      refetch={[MockFunction]}
    />
     
    <Apollo(Apollo(DeleteOffice))
      currentPage={1}
      id="delete-modal"
      officeId="11"
      officeName="EPIC Tower"
      refetch={[MockFunction]}
    />
  </td>
</tr>
`;
